# shimesu

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  SKILL.md  renovate.json
.github/: release.yml
.github/workflows/: ci.yml
infra/: certificate.yaml  stack.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs  output.rs
src/commands/: aws_error.rs  content_store.rs  mod.rs  status.rs  status_tests.rs  support.rs
src/commands/doctor/: aws.rs  backend.rs  mod.rs  models.rs  tests.rs
src/commands/publish/: inputs.rs  mod.rs  sync.rs  tests.rs
src/commands/site/: delete.rs  inspect.rs  list.rs  mod.rs  record.rs  store.rs
src/commands/stack/: assets.rs  certificate.rs  certificate_dns.rs  certificate_ownership.rs  certificate_stack.rs  certificate_tests.rs  certificate_validation.rs  destroy.rs  destroy_output.rs  destroy_tests.rs  init.rs  init_flow_tests.rs  init_input_tests.rs  input.rs  mod.rs  ownership.rs  progress.rs  route53.rs  stack_status_tests.rs  teardown.rs  teardown_delete.rs  teardown_discovery.rs  teardown_s3.rs  teardown_tests.rs  update.rs
src/core/: mod.rs  validation.rs
static/: 404.html  index.html
tests/: cli.rs
